Updated home page images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <ul>
                            <li> <a href="about.html">About</a></li>
                            <li> <a href="services.html">Services</a></li>
-                           <li> <a href="contacts.html">Contact</a></li>
+                           <!--<li> <a href="contacts.html">Contact</a></li>!-->
                         </ul>
                      </nav>
                   </div>
@@ -64,11 +64,11 @@
                   <div class="card-columns">
                      <div class="card card-hover h-100" >
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner7.jpg" alt="Card image cap">
+                           <a href="Assets/Garment1.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/Garment1.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p> Thursday</p>
+                                    <p>Garment #1</p>
                                  </div>
                               </div>
                            </a>
@@ -76,11 +76,11 @@
                      </div>
                      <div class="card card-hover h-100" >
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner1.jpg" alt="Card image cap">
+                           <a href="Assets/FinalLineup.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/FinalLineup.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Sunday</p>
+                                    <p>Final Lineup</p>
                                  </div>
                               </div>
                            </a>
@@ -88,11 +88,11 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner2.jpg" alt="Card image cap">
+                           <a href="Assets/SampleMaterial1.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/SampleMaterial1.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Friday</p>
+                                    <p>Sample Material</p>
                                  </div>
                               </div>
                            </a>
@@ -100,11 +100,11 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner8.jpg" alt="Card image cap">
+                           <a href="Assets/Garment1WithDress.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/Garment1WithDress.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Stay with me</p>
+                                    <p>Garment #1 + Dress</p>
                                  </div>
                               </div>
                            </a>
@@ -112,11 +112,11 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner3.jpg" alt="Card image cap">
+                           <a href="Assets/SampleLineup1.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/SampleLineup1.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>It's Thursday night</p>
+                                    <p>Sample Lineup #1</p>
                                  </div>
                               </div>
                            </a>
@@ -124,11 +124,11 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner4.jpg" alt="Card image cap">
+                           <a href="Assets/SampleMaterial2.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/SampleMaterial2.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Saturday</p>
+                                    <p>Sample Material</p>
                                  </div>
                               </div>
                            </a>
@@ -136,23 +136,11 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner5.jpg" alt="Card image cap">
+                           <a href="Assets/SampleLineup2.jpg" target="_blank">
+                              <img class="card-img-top" src="Assets/SampleLineup2.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>For the weekend</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100">
-                        <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="Assets/Banner6.jpg" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>Let's get it right</p>
+                                    <p>Sample Lineup #2</p>
                                  </div>
                               </div>
                            </a>
@@ -171,7 +159,7 @@
                <p>
                   <a href="about.html">About</a><br>
                   <a href="services.html">Services</a><br>
-                  <a href="contacts.html">Contact</a><br>
+                  <!--<a href="contacts.html">Contact</a><br>!-->
                </p>
             </div>
             <div class="col-xl-2 col-md-8 offset-md-1 col-sm-12">
