--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         <ul>
                            <li> <a href="about.html">About</a></li>
                            <li> <a href="services.html">Services</a></li>
-                           <li> <a href="contacts.html">Contact</a></li>
+                           <!--<li> <a href="contacts.html">Contact</a></li>!-->
                         </ul>
                      </nav>
                   </div>
@@ -76,7 +76,7 @@
                <p>
                   <a href="about.html">About</a><br>
                   <a href="services.html">Services</a><br>
-                  <a href="contacts.html">Contact</a><br>
+                  <!--<a href="contacts.html">Contact</a><br>!-->
                </p>
             </div>
             <div class="col-xl-2 col-md-8 offset-md-1 col-sm-12">
